# reversi

./: .gitattributes  .gitignore  Dockerfile  docker-compose.yml  install_tf.sh  reversi.code-workspace  tensorflow.pc  tensorflow_cc.pc  workspace.code-workspace
.devcontainer/: devcontainer.json  docker-compose.yml
app/: generate_bindings.sh  pubspec.yaml
experimental/: Dockerfile  Dockerfile.tensorflow  docker-compose.yml  workspace.code-workspace
libtensorflow_arm64/: libtensorflow.so.2  libtensorflow.so.2.14.0  libtensorflow.so.2.14.0-2.params  libtensorflow_framework.so.2  libtensorflow_framework.so.2.14.0  (+1 more)
plugin/: .metadata  (+3 more)
reversi/: Cargo.toml  Dockerfile  docker-compose.yml
reversi/.devcontainer/: devcontainer.json  docker-compose.yml
reversi/benches/: board_bench.rs  search_bench.rs
reversi/examples/: example.rs
reversi/python/: alpha_zero_network.py
reversi/reversi.xcodeproj/: project.pbxproj
reversi/reversi.xcodeproj/xcuserdata/yusuke.xcuserdatad/xcschemes/: xcschememanagement.plist
reversi/src/: action.rs  api.rs  board.rs  bridge_generated.rs  ffi.rs  indexer.rs  lib.rs  main.rs  player.rs  reversi.rs
reversi/src/reversi/: ai.rs  board.rs  common.rs  game.rs  player.rs
reversi/src/reversi/ai/: evaluation_function.rs  evaluator.rs  game_tree.rs  game_tree_node.rs  nega_alpha.rs  nega_max.rs  nega_max_search.rs  node.rs  reversi_node.rs  self_play.rs  tensorflow_example.rs
reversi/src/reversi/board/: array_board.rs  bit_board.rs  index_board.rs
reversi/src/reversi/player/: ai_player.rs  console_io_player.rs  gui_player.rs
(+120 files in other folders)
