[package]
name = "reversi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "example"

[[bench]]
name = "board_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false
